--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,37 @@ body {
   --primary: rgb(43, 45, 66);
   --secondary: #fff;
   --highlight: #8884d8;
+  --spring-easing: linear(
+    0,
+    0.00217 0.5%,
+    0.00866 1.01%,
+    0.0346 2.07%,
+    0.14066 4.43%,
+    0.28086 6.651%,
+    0.72289 12.911%,
+    0.93834 16.722%,
+    1.01676 18.572%,
+    1.07743 20.432%,
+    1.12131 22.332%,
+    1.14934 24.312%,
+    1.15904 25.603%,
+    1.16294 26.953%,
+    1.16113 28.383%,
+    1.15356 29.933%,
+    1.12887 32.783%,
+    1.05059 39.614%,
+    1.01677 43.094%,
+    0.99057 46.975%,
+    0.9766 50.995%,
+    0.9735 53.835%,
+    0.97488 57.056%,
+    0.9966 69.827%,
+    1.00329 76.878%,
+    1.00417 83.808%,
+    0.99996
+  );
+
+  --spring-duration: 0.5s;
 }
 
 div {
